Fixed logo on small screens

--- a/app/client/stylesheets/_sidebar.scss
+++ b/app/client/stylesheets/_sidebar.scss
@@ -78,6 +78,9 @@
       color: white;
       font-size: 2em;
     }
+    .img{
+      width: 100%;
+    }
   }
 
 }
